--- a/WebSite/WebSite/WebSite.csproj
+++ b/WebSite/WebSite/WebSite.csproj
@@ -1059,7 +1059,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
