--- a/WebSite/WebSite/WebSite.csproj
+++ b/WebSite/WebSite/WebSite.csproj
@@ -311,6 +311,7 @@
     <None Include="Scripts\jquery\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\angular\services\admin-service.js" />
     <Content Include="Scripts\angular\services\system-service.js" />
+    <Content Include="Scripts\config.js" />
     <Content Include="Scripts\jquery\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery\jquery.validate-vsdoc.js" />
