--- a/WebSite/WebSite/WebSite.csproj
+++ b/WebSite/WebSite/WebSite.csproj
@@ -326,6 +326,7 @@
     <Content Include="Scripts\jquery\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\jquery\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Views\Templates\list.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -334,7 +335,6 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Content\site.css" />
-    <Content Include="Scripts\_references.js" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
     <Content Include="Images\heroAccent.png" />
