--- a/WebSite/WebSite/WebSite.csproj
+++ b/WebSite/WebSite/WebSite.csproj
@@ -206,6 +206,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\jasmine-web-site.css" />
+    <Content Include="Content\jasmine.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -281,7 +283,7 @@
     <Content Include="Scripts\angular\otherLib\angular-message-format.min.js" />
     <Content Include="Scripts\angular\otherLib\angular-messages.js" />
     <Content Include="Scripts\angular\otherLib\angular-messages.min.js" />
-    <Content Include="Scripts\angular\otherLib\angular-mocks.js" />
+    <Content Include="Scripts\angular\angular-mocks.js" />
     <Content Include="Scripts\angular\otherLib\angular-parse-ext.js" />
     <Content Include="Scripts\angular\otherLib\angular-parse-ext.min.js" />
     <Content Include="Scripts\angular\otherLib\angular-resource.js" />
@@ -311,7 +313,12 @@
     <None Include="Scripts\jquery\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\angular\services\admin-service.js" />
     <Content Include="Scripts\angular\services\system-service.js" />
+    <Content Include="Scripts\app-spec.js" />
+    <Content Include="Scripts\app.js" />
     <Content Include="Scripts\config.js" />
+    <Content Include="Scripts\jasmine\jasmine-bootstrap.js" />
+    <Content Include="Scripts\jasmine\jasmine-html.js" />
+    <Content Include="Scripts\jasmine\jasmine.js" />
     <Content Include="Scripts\jquery\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery\jquery.validate-vsdoc.js" />
@@ -326,7 +333,6 @@
     <Content Include="Scripts\jquery\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\jquery\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Views\Templates\list.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -351,6 +357,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\jquery\version.json" />
     <Content Include="Views\Home\AdminIndex.cshtml" />
+    <Content Include="Views\Home\TestsIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
