--- a/WebSite/WebSite/WebSite.csproj
+++ b/WebSite/WebSite/WebSite.csproj
@@ -268,8 +268,8 @@
     <Content Include="Images\computer-folder.png" />
     <Content Include="Images\hard-drive.png" />
     <Content Include="Images\text-file.png" />
-    <Content Include="Scripts\angular\controllers\admin-controller.js" />
-    <Content Include="Scripts\angular\controllers\drive-controller.js" />
+    <Content Include="Scripts\angular\controllers\adminController.js" />
+    <Content Include="Scripts\angular\controllers\driveController.js" />
     <Content Include="Scripts\angular\otherLib\angular-animate.js" />
     <Content Include="Scripts\angular\otherLib\angular-animate.min.js" />
     <Content Include="Scripts\angular\otherLib\angular-aria.js" />
@@ -311,8 +311,8 @@
     <Content Include="Scripts\angular\otherLib\angular-animate.min.js.map" />
     <Content Include="Scripts\angular\angular.min.js.map" />
     <None Include="Scripts\jquery\jquery-1.8.2.intellisense.js" />
-    <Content Include="Scripts\angular\services\admin-service.js" />
-    <Content Include="Scripts\angular\services\system-service.js" />
+    <Content Include="Scripts\angular\services\adminService.js" />
+    <Content Include="Scripts\angular\services\systemService.js" />
     <Content Include="Scripts\app-spec.js" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\config.js" />
