--- a/WebSite/WebSite/WebSite.csproj
+++ b/WebSite/WebSite/WebSite.csproj
@@ -268,6 +268,7 @@
     <Content Include="Global.asax" />
     <Content Include="Images\computer-folder.png" />
     <Content Include="Images\hard-drive.png" />
+    <Content Include="Images\home-solid.png" />
     <Content Include="Images\text-file.png" />
     <Content Include="Scripts\underscore\underscore-min.js" />
     <Content Include="Scripts\angular\controllers\adminController.js" />
